<resources>
    <string name="app_name">Movie App</string>

    <string name="see_all">See all</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="tv_shows">TV Shows</string>
    <string name="search_hint">Search...</string>
    <string name="movies_chip">Movies</string>
    <string name="tv_shows_chip">TV Shows</string>
    <string name="actors_label">Actors</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="place_of_birth">place of Birth</string>
    <string name="konwn_for">Known For</string>
    <string name="todo">TODO</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="actors">Actors</string>
    <string name="oops">Oops!</string>
    <string name="description">There is no internet connection\nPlease check it out</string>
    <string name="all_movies_of_actor">All Movies Of Actor</string>
    <!--   Titles -->
    <string name="title_on_air">On The Air</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_mystery">Mystery</string>
    <string name="title_adventure">Adventure</string>
    <string name="title_trending">Trending</string>
    <string name="title_streaming">Now Streaming</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_celebrity">Celebrities</string>
    <string name="title_airing_today">Airing today</string>
    <string name="title_top_rated_tv_show">Top Rated Tv-Show</string>
    <string name="text_movies">%s Movies</string>
    <string name="movies_label">Movies</string>
    <string name="tv_shows_label">TV Shows</string>
    <string name="history_label">History</string>
    <string name="explore_label">Explore</string>
    <string name="trending_today_label">Trending Today</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="myList">My Lists</string>
    <string name="profile">Profile</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="duration">%1$d Minutes</string>
    <string name="reviews">(%1$s reviews)</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="rate_the_movie">Rate The Movie</string>
    <string name="reviews_title">Reviews</string>
    <string name="review">Reviews</string>
    <string name="top_reviews">Top Reviews</string>
    <string name="user_name">"@" %1$s</string>
    <string name="back_button">back button</string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="submit_toast">Submitted, Thank you for your feedback</string>
    <string name="total_episodes">%1$s Episodes</string>
    <string name="m">%1$s m</string>
    <string name="watch_history">Watch History</string>
    <string name="rated_movies">My Ratings</string>
    <string name="sign_out">Sign Out</string>
    <string name="at">\@</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You’re about to sign out of your account.</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Sign Out</string>
    <string name="this_list_has_no_movies">This list has no movies</string>
    <string name="zero">\.0</string>
    <string name="my_ratings">My Ratings</string>
    <string name="items">%1$s Items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="list_name">e.g. My Watchlist</string>
    <string name="collection_name">Collection Name</string>
    <string name="empty_overview_text">This season has no description.</string>
    <string name="one_season">%1$d Season</string>
    <string name="more_than_one_season">%1$d Seasons</string>
    <string name="internet_connection">There is no internet connection.</string>
    <string name="retry">Try Again</string>
    <string name="you_must_be_logged_in_to_see_the_profile">You must be logged in to see the profile and use additional features.</string>
    <string name="new_list">New List</string>
    <string name="log_in">Log In</string>
    <string name="you_must_be_logged_in_to_use_list_features">You must be logged in to use lists feature.</string>
    <string name="empty">Empty</string>
    <string name="create_a_new_list">Create New Collection</string>
    <string name="save_to">Save to…</string>
    <string name="hours_pattern">%1$s hours</string>
    <string name="minutes_pattern">%1$s minutes</string>
    <string name="hours_minutes_pattern">%1$s h %2$s m</string>
    <string name="you_must_be_logged_in_to_save_a_movie">You must be logged in to save a movie</string>
    <string name="this_list_has_no_lists">No lists found</string>
    <string name="episode_title">%1$d. %2$s</string>
    <string name="season_number">(%1$s Seasons)</string>
    <string name="show_more">Show More</string>
    <string name="best_of">Best of %1$s</string>
    <string name="born_on">Born on %1$s</string>
    <string name="in">In %1$s</string>
    <string name="youtube">YouTube</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="tiktok">Tiktok</string>
    <string name="clock_icon">clock Icon</string>
    <string name="calender_icon">Calender icon</string>
    <string name="you_gave_it">You gave it</string>
    <string name="arrow_icon">arrow icon</string>
    <string name="match">Match</string>
    <string name="me">Me</string>
    <string name="start_collecting">Start Collecting</string>
    <string name="no_collections">No Collections Yet</string>
    <string name="no_collections_description">Start building your personal library by saving movies or series you want to remember.</string>
    <string name="login_title">You\'re almost there!</string>
    <string name="login_description">Log in to save movies, create collections, and get personalized recommendations.</string>
    <string name="series">Series</string>
    <string name="collection_tip_message">Tip: Swipe left to remove movies from your collection.</string>
    <string name="logo">Logo</string>
    <string name="welcome_back_to_cineverse">Welcome back to CineVerse!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="guest">Guest</string>
    <string name="oops_no_internet">Oops! No Internet</string>
    <string name="try_again">try again</string>
    <string name="gallery">Gallery</string>
</resources>