<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.login.LoginViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="104dp"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_colored_cineverse_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            android:fontFamily="@font/manrope_medium"
            android:gravity="center_horizontal"
            android:text="@string/welcome_back_to_cineverse"
            android:textColor="@color/primary_shade_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:gravity="left"
            android:text="@string/username"
            android:textColor="@color/secondary_shade_color"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_username"
            style="@style/textInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{viewModel.loginUIState.userNameHelperText}"
            app:errorIconDrawable="@{@drawable/ic_outline_danger_triangle}"
            app:startIconDrawable="@{@drawable/ic_outline_user}">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/textInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(text) -> viewModel.onUserNameInputChange(text)}"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:gravity="left"
            android:text="@string/password"
            android:textColor="@color/secondary_shade_color"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_passowrd"
            style="@style/textInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:error="@{viewModel.loginUIState.passwordHelperText}"
            app:errorIconDrawable="@null"
            app:passwordToggleDrawable="@drawable/password_toggle"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@{@drawable/ic_outline_lock}">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/textInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(text) -> viewModel.onPasswordInputChange(text)}"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:gravity="right"
            android:onClick="@{()->viewModel.onClickForgotPassword()}"
            android:text="@string/forgot_password"
            android:textColor="@color/secondary_shade_color"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_primary_background"
            android:enabled="@{viewModel.loginUIState.isValidForm}"
            android:onClick="@{()->viewModel.onClickLogin()}"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textAppearance="@style/Font_Body_MD.Medium"
            android:textColor="@color/button_primary_text_color"
            app:cornerRadius="@dimen/radius_lg" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_guest"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_secondary_background"
            android:onClick="@{()->viewModel.onClickGuest()}"
            android:outlineProvider="none"
            android:text="@string/guest"
            android:textAppearance="@style/Font_Body_MD.Medium"
            android:textColor="@color/button_secondary_text_color"
            app:cornerRadius="@dimen/radius_lg" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_secondary_background"
            android:onClick="@{()->viewModel.onClickSignUp()}"
            android:outlineProvider="none"
            android:text="@string/sign_up"
            android:textAppearance="@style/Font_Body_SM.Medium"
            android:textColor="@color/button_secondary_text_color"
            app:cornerRadius="@dimen/radius_md" />
    </LinearLayout>

</layout>