<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.myList.MyListsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_medium"
        android:background="@drawable/bottom_sheet_corners">

        <View
            android:id="@+id/drag_bar"
            android:layout_width="48dp"
            android:layout_height="3dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ternary_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/bottom_sheet_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            app:layout_constraintTop_toBottomOf="@id/drag_bar"
            >
            <TextView
                android:id="@+id/primary_text"
                style="@style/Medium.Medium.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:text="@string/create_a_new_list"
                android:textColor="@color/primary_shade_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/secondary_shade_color"
                android:src="@drawable/ic_outline_cancel"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            style="@style/Regular.Medium.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/collection_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_header" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/list_name"
            style="@style/InputField"
            android:layout_marginTop="8dp"
            android:afterTextChanged="@{(text) -> viewModel.onListNameInputChange(text)}"
            android:drawableStart="@drawable/ic_outline_folder"
            android:hint="@string/list_name"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <LinearLayout
            android:id="@+id/bottom_sheet_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintTop_toBottomOf="@id/list_name">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Medium.Medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:onClick="@{()->viewModel.onClickAddList()}"
                android:paddingVertical="14dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/onsecondary_button_color"
                app:backgroundTint="@color/Secondary_Button_color"
                app:cornerRadius="@dimen/radius_medium" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Medium.Medium"
                android:enabled="@{!viewModel.createListDialogUIState.mediaListName.empty}"
                android:onClick="@{()->viewModel.onClickAddList()}"
                android:paddingVertical="14dp"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/onPrimary_Button_color"
                app:backgroundTint="@drawable/button_primary"
                app:cornerRadius="@dimen/radius_medium" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

