<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.profile.logout.LogoutViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:backgroundTint="@color/bottom_sheet_background_color"
        app:cardCornerRadius="@dimen/radius_medium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="35dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/logout_image"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_confirmation"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_confirmation"
                style="@style/SemiBold.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/are_you_sure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_confirmation_message" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_confirmation_message"
                style="@style/Regular.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/you_re_about_to_sign_out_of_your_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/buttons" />

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text_cancel"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    app:cornerRadius="12dp"
                    android:layout_marginEnd="12dp"
                    android:backgroundTint="@color/Secondary_Button_color"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onCloseDialog()}"
                    android:text="@string/cancel"
                    android:textSize="14sp"
                    android:paddingVertical="14dp"
                    app:elevation="0dp"
                    android:textColor="@color/secondary_shade_color"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/text_sign_out_action"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cornerRadius="12dp"
                    android:backgroundTint="@color/primary_red_color"
                    android:onClick="@{() -> viewModel.onLogout()}"
                    android:text="@string/logout"
                    android:paddingVertical="14dp"
                    android:textSize="14sp"
                    android:textColor="@color/onPrimary_Button_color" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>