<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.explore.ExploringViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background_color">

        <EditText
            android:id="@+id/input_search"
            style="@style/Regular.Medium"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_outline_search"
            android:drawableEnd="@drawable/ic_outline_microphone"
            android:drawablePadding="8dp"
            android:focusableInTouchMode="false"
            android:hint="@string/search_hint"
            android:onClick="@{() -> viewModel.onClickSearch()}"
            android:paddingStart="16dp"
            android:paddingEnd="14dp"
            android:textColorHint="@color/ternary_shade_color"
            android:transitionName="search_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_search"
            android:layout_marginTop="12dp"
            app:tabIndicatorColor="@color/primary_brand_color"
            app:tabSelectedTextColor="@color/primary_brand_color"
            app:tabTextAppearance="@style/Font_Body_MD.Medium"
            android:background="@color/screen_background_color">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series" />

        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>