<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.karrar.movieapp.ui.myList.listDetails.ListDetailsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_tip"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/info_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_info_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/primary_brand_color" />

            <TextView
                android:id="@+id/tip_text"
                style="@style/Font_Body_SM.Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/collection_tip_message"
                android:textColor="@color/primary_shade_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel_icon"
                app:layout_constraintStart_toEndOf="@id/info_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cancel_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:onClick="@{() -> viewModel.closeTip()}"
                android:src="@drawable/ic_outline_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/secondary_shade_color" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/tip_group"
            android:layout_width="wrap_content"
            app:isVisible="@{viewModel.listDetailsUIState.isTipShown &amp;&amp; !viewModel.listDetailsUIState.savedMedia.empty}"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tip" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lists"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:items="@{viewModel.listDetailsUIState.savedMedia}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip"
            tools:listitem="@layout/item_list_details" />


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateDrawable="@drawable/loading_shape"
            app:isVisible="@{viewModel.listDetailsUIState.loading}"
            />

        <!--        empty List          -->

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/no_data"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_data" />

        <TextView
            android:id="@+id/title"
            style="@style/SemiBold.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-64dp"
            android:text="@string/empty"
            android:textColor="@color/primary_brand_color"
            app:layout_constraintEnd_toEndOf="@+id/no_data"
            app:layout_constraintStart_toStartOf="@+id/no_data"
            app:layout_constraintTop_toBottomOf="@+id/no_data" />

        <TextView
            android:id="@+id/description_empty_list"
            style="@style/Regular.Medium.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/this_list_has_no_movies"
            app:layout_constraintEnd_toEndOf="@+id/no_data"
            app:layout_constraintStart_toStartOf="@+id/no_data"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/empty_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="description_empty_list,title,no_data"
            app:isListEmpty="@{viewModel.listDetailsUIState.isEmpty}" />

        <!--        Error State         -->

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_lost_connection"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="@dimen/spacing_small"
            app:layout_constraintBottom_toTopOf="@+id/title_lost_connection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/lost_internet_animation" />

        <TextView
            android:id="@+id/title_lost_connection"
            style="@style/SemiBold.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:text="@string/oops"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_lost_connection"
            style="@style/Regular.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/primary_brand_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_lost_connection" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:onClick="@{() -> viewModel.getData()}"
            android:text="@string/retry"
            android:textColor="@color/card_background_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_lost_connection" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/error_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="title_lost_connection,animation_lost_connection,description_lost_connection,button_retry"
            app:isVisible="@{!viewModel.listDetailsUIState.error.empty}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>